<resources>
    <string name="app_name">tallerUno</string>
    <string name="Cliente">Cliente</string>
    <string name="Restaurante">Restaurante</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Iniciar_Sesión">Iniciar Sesión</string>
    <string name="Editar_Perfil">Editar Perfil</string>
    <string name="Idioma">Idioma</string>
    <string name="Sobre_nosotros">Sobre nosotros</string>
    <string name="Terminos_y_condiciones">Terminos y condiciones</string>
    <string name="Políticas_de_privacidad">Políticas de privacidad</string>
    <string name="Evalúa_esta_app">Evalúa esta app</string>
    <string name="Comparte_esta_app">Comparte esta app</string>
    <string name="Menus">Menús</string>
    <string name="Resenas">Reseñas</string>
    <string name="Fotos">Fotos</string>
    <string name="SalchipapaEspecial">Salchipapa Especial</string>
    <string name="LimonadaCoco">Limonada de Coco</string>
    <string name="PizzaMediana">Pizza Mediana</string>
    <string name="PorJuan">Por: Juan Villamil</string>
    <string name="Reseña">¡Fue una gran experiencia! Definitivamente recomiendo este lugar, la atención es fabulosa, y el ambiente es bastante acogedor</string>
    <string name="Editar">Editar</string>
    <string name="Ver">Ver</string>
    <string name="VerTodas">Ver Todas</string>
    <string name="AñadirEditar">Añadir o Editar</string>
    <string name="lo_que_va_despues">Lo que va despues</string>
    <string name="comidas">Comidas</string>
    <string name="cerca_de_ti">Cerca de tí</string>
    <string name="ver_todo">Ver todo</string>
    <string name="ver_menu">Ver Menú</string>
    <string name="ver_ruta">Ver Ruta</string>
    <string name="la_hamburgueseria">La Hamburguesería</string>
    <string name="DescripcionCercano">Restaurante de Comidas Rápidas con una gran variedad de opciones, entre papas, entradas, y diversas hamburguesas para todos los gustos</string>
    <string name="resenatitulo">Reseña</string>
    <string name="anadir_resena">Añadir Reseña</string>
</resources>