<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoazul"
    tools:context=".ComidaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/perfilboton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/perfil" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/nombremarcados" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/botonconfig" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Menus"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/Editar"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/salchipapa"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SalchipapaEspecial"
                android:textStyle="bold" />
            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/Ver"
                android:textStyle="bold"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/limonadacoco"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LimonadaCoco"
                android:textStyle="bold" />

            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/Ver"
                android:textStyle="bold"
                android:textSize="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/pizzamediana"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PizzaMediana"
                android:textStyle="bold" />
            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/Ver"
                android:textStyle="bold"
                android:textSize="15dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Resenas"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/VerTodas"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PorJuan"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/Reseña"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/imgresena"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Fotos"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/AñadirEditar"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="230dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:background="@drawable/foto"
        android:textStyle="bold" />
</LinearLayout>